# pyx3270

./: .coveragerc  .gitignore  CAPTURAS.md  CHANGELOG.md  README.md  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt  requirements_.txt  server.log.2025-05-29  x3270_emulator.log.2025-05-24  x3270_emulator.log.2025-05-26  x3270_emulator.log.2025-05-27  x3270_emulator.log.2025-05-29
0.1.0/: 404.html  index.html
0.1.0/assets/css/: extra.css
0.1.0/automacao/: index.html
0.1.0/changelog/: index.html
0.1.0/comandos/: index.html
0.1.0/contribuindo/: index.html
0.1.0/estrutura/: index.html
0.1.0/instalacao/: index.html
0.1.0/primeiros_passos/: index.html
0.1.0/search/: search_index.json
0.1.0/sobre/: index.html
0.1.0/tutorial/: index.html
0.1.1/: 404.html  index.html
0.1.1/changelog/: index.html
0.1.1/comandos/: index.html
0.1.1/estrutura/: index.html
0.1.1/search/: search_index.json
chanlogs.d/: +372307f2.feature.md  +3ab5f2e8.feature.md  +4068a5db.feature.md  +880e1664.feature.md  +9b182474.fix.md  +9c1b1710.tests.md  +a900a768.feature.md  +b96cec55.tests.md  +c70e6cbe.feature.md  +db674ef9.fix.md  +e3ea1e10.fix.md  +fce672cc.feature.md
docs/: changelog.md  comandos.md  gen_tree.py  index.md  instalacao.md  introducao.md  primeiros_passos.md  sobre.md  tutorial.md
docs/assets/css/: extra.css
docs/assets/js/: termynal-init.js
pyx3270/: __init__.py  __main__.py  cli.py  command_config.py  emulator.py  exceptions.py  iemulator.py  logging_config.py  offline.py  py.typed  server.py  state.py  tn3270.py  x3270_commands.py
pyx3270/binary/Settings/: HxD Hex Editor.ini
tests/: conftest.py  test_cli.py  test_emulator.py  test_exceptions.py  test_offline.py  test_server.py
