[project]
name = "pyx3270"
version = "0.1.0"
description = "Uma interface comum utilizada para automações de terminais 3270 da IBM."
authors = [{name = "MatheusLPolidoro", email = "mattpolidoro4@gmail.com"}]
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "typer",
    "pynput",
    "click",
    "colorama",
    "markdown-it-py",
    "mdurl",
    "Pygments",
    "rich",
    "shellingham",
    "typing_extensions"
]


[project.scripts]
pyx3270 = "pyx3270.__main__:app"

[tool.ruff]
line-length = 79

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.taskipy.tasks]
lint = "ruff check . --diff"
format = "ruff check . --fix && ruff format ."

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"pyx3270" = ["binary/*"]

[build-system]
requires = ["setuptools>=61.0,<70"]
build-backend = "setuptools.build_meta"
